[tool.poetry]
name = "api-convert-currencies"
version = "0.1.0"
description = ""
authors = ["Joel Esteves"]
license = "MIT"
readme = "README.md"
packages = [{include = "api_convert_currencies"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
requests = "^2.28.2"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
